--- a/_posts/2022-11-20-EGRAPH.md
+++ b/_posts/2022-11-20-EGRAPH.md
@@ -2,16 +2,13 @@
 layout: post
 title: "E-Graph: Minimal Solution for Rigid Rotation with Extensibility Graphs"
 author:
-- Bart Simpson
-- Nelson Mandela Muntz
+- Y. Li
+- F. Tombari
 meta: "Springfield"
 ---
 
 <div style="float:left;margin:0 10px 10px 0" class="col-md-4" markdown="1">
   <!-- ![Alt Text](../img/folder/blah.jpg) -->
-  <img width="300px" class="center-block" src="../images/venom.gif">
+  <img width="300px" class="center-block" src="../../../images/venom.gif">
   </div>
-This work proposes a RGB-D SLAM system specifically designed for structured environments and aimed at improved tracking
-and mapping accuracy by relying on geometric features that are extracted from the surrounding. Structured environments
-offer, in addition to points, also an abundance of geometrical features such as lines and planes, which we exploit to design both the tracking and mapping components of our SLAM system.
-
+ A new minimal solution is proposed to solve relative rotation estimation between two images without overlapping areas by exploiting a new graph structure, which we call Extensibility Graph (E-Graph). Differently from a co-visibility graph, high-level landmarks, including vanishing directions and plane normals, are stored in our E-Graph, which are geometrically extensible. Based on E-Graph, the rotation estimation problem becomes simpler and more elegant, as it can deal with pure rotational motion and requires fewer assumptions, e.g. Manhattan/Atlanta World, planar/vertical motion. Finally, we embed our rotation estimation strategy into a complete camera tracking and mapping system which obtains 6-DoF camera poses and a dense 3D mesh model.
