--- a/_posts/2022-11-20-EGRAPH.md
+++ b/_posts/2022-11-20-EGRAPH.md
@@ -11,4 +11,15 @@ meta: "Springfield"
   <!-- ![Alt Text](../img/folder/blah.jpg) -->
   <img width="300px" class="center-block" src="../../../images/venom.gif">
   </div>
+  <li> <b>Yanyan Li</b> and Federico Tombari.</li> 
+  <li><span style="color:#B31B1B;font-weight:bold;">@ ECCV 2022</span> </li>
+<li>
+<span class="link"><a target=_blank href="https://arxiv.org/abs/2412.03079">[Paper]</a></span>
+<span class="link"><a target=_blank href="https://www.youtube.com/watch?v=lv7omGWBApM">[video]</a></span>
+</li>
+<div style="clear: both;"></div>
+
+<h3>Abstract:</h3>
+<div>
  A new minimal solution is proposed to solve relative rotation estimation between two images without overlapping areas by exploiting a new graph structure, which we call Extensibility Graph (E-Graph). Differently from a co-visibility graph, high-level landmarks, including vanishing directions and plane normals, are stored in our E-Graph, which are geometrically extensible. Based on E-Graph, the rotation estimation problem becomes simpler and more elegant, as it can deal with pure rotational motion and requires fewer assumptions, e.g. Manhattan/Atlanta World, planar/vertical motion. Finally, we embed our rotation estimation strategy into a complete camera tracking and mapping system which obtains 6-DoF camera poses and a dense 3D mesh model.
+ </div>
