--- a/_posts/2022-11-20-EGRAPH.md
+++ b/_posts/2022-11-20-EGRAPH.md
@@ -14,7 +14,7 @@ meta: "Springfield"
   <li> <b>Yanyan Li</b> and Federico Tombari.</li> 
   <li><span style="color:#B31B1B;font-weight:bold;">@ ECCV 2022</span> </li>
 <li>
-<span class="link"><a target=_blank href="https://arxiv.org/abs/2412.03079">[Paper]</a></span>
+<span class="link"><a target=_blank href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136820298.pdf">[Paper]</a></span>
 <span class="link"><a target=_blank href="https://www.youtube.com/watch?v=lv7omGWBApM">[video]</a></span>
 </li>
 <div style="clear: both;"></div>
