--- a/_posts/2025-06-15-4DGSSLAM.md
+++ b/_posts/2025-06-15-4DGSSLAM.md
@@ -22,7 +22,7 @@ meta: "Springfield"
 <li>
 <span class="link"><a target=_blank href="https://arxiv.org/pdf/2503.16710">[Paper]</a></span>
 <span class="link"><a target=_blank href="https://yanyan-li.github.io/project/gs/4dgsslam.html">[Project Page]</a></span>
-<span class="link"><a target=_blank href="https://github.com/yanyan-li/4DGS-SLAM">[Code Coming Soon]</a></span>
+<span class="link"><a target=_blank href="https://github.com/yanyan-li/4DGS-SLAM">[Code]</a></span>
 </li>
 <div style="clear: both;"></div>
 
