--- a/_posts/2025-11-16-Active3D.md
+++ b/_posts/2025-11-16-Active3D.md
@@ -12,7 +12,7 @@ meta: "Springfield"
   <!-- ![Alt Text](../img/folder/blah.jpg) -->
   <img width="300px" class="center-block" src="../../../images/ReimanLine.gif">
   </div>
-<li> <b>Yan Li</b>, Yingzhao Li, Gim Hee Lee. <span style="color:#B31B1B;font-weight:bold;">@ AAAI 2026</span> </li>
+<li> <b>Yan Li</b>, Yingzhao Li, Gim Hee Lee. <span style="color:#B31B1B;font-weight:bold;">@ AAAI 2026 (Oral)</span> </li>
 <li>
 <span class="link"><a target=_blank href="https://yanyan-li.github.io/project/vlx/active3d.html">[Project Page]</a></span>
 </li>
