--- a/_posts/2025-11-16-Active3D.md
+++ b/_posts/2025-11-16-Active3D.md
@@ -10,7 +10,7 @@ meta: "Springfield"
 ---
 <div style="float:left;margin:0 10px 10px 0" class="col-md-4" markdown="1">
   <!-- ![Alt Text](../img/folder/blah.jpg) -->
-  <img width="300px" class="center-block" src="../../../images/ReimanLine.gif">
+  <img width="300px" class="center-block" src="../../../images/active3d.gif">
   </div>
 <li> <b>Yan Li</b>, Yingzhao Li, Gim Hee Lee. <span style="color:#B31B1B;font-weight:bold;">@ AAAI 2026 (Oral)</span> </li>
 <li>
